--- a/src/App.scss
+++ b/src/App.scss
@@ -84,7 +84,7 @@ main {
 			@media (max-width: 1024px) {
 				margin-bottom: 1rem;
 				form {
-					grid-template-columns: 2rem auto auto;
+					grid-template-columns: 2rem auto 6rem;
 
 					padding: 0 0.5rem;
 					gap: 0.2rem;
