--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,7 @@ main {
 	}
 	.container {
 		max-width: 80%;
+		width: 90%;
 		margin: auto;
 		padding-top: 5rem;
 		padding-bottom: 5rem;
@@ -66,6 +67,7 @@ main {
 					color: inherit;
 					font-size: clamp(0.8rem, 2vw, 1.4rem);
 					height: 40%;
+					width: 100%;
 					&::placeholder {
 						font-size: inherit;
 						opacity: 0.6;
@@ -236,7 +238,7 @@ main {
 	}
 	@media (max-width: 1024px) {
 		.container {
-			max-width: 98%;
+			max-width: 90%;
 			padding-top: 2rem;
 			padding-bottom: 2rem;
 			header {
